feat(gameplay): add server admin endpoints (#65)
